feat(s3stream/wal): support block device (#667)
Signed-off-by: Ning Yu <ningyu@automq.com>