@@ -175,6 +175,12 @@
                     <skipAfterFailureCount>1</skipAfterFailureCount>
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
+                    <argLine>
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                    </argLine>
+                    <systemPropertyVariables>
+                        <io.netty.tryReflectionSetAccessible>true</io.netty.tryReflectionSetAccessible>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
